fix scrollbar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,7 +27,8 @@ body {
   margin: 0;
   height: 100%;
   font-family: var(--tertiary-font);
-  overflow-y: auto;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .app-wrapper {
